test/simple/typeerrors/Edinburgh/Ex1.hs
module Ex1 where

test = \x -> \a -> (x a, x 2, [x,3])
